Make UA DOMActivate events composed events

The spec is: https://w3c.github.io/uievents/#event-type-DOMActivate

This is basically a bug fix. We forgot to update legacy UI Events in Blink after
I updated the UI Events spec at:
https://github.com/w3c/uievents/commit/d075314393fad8e07af797dbbab9a5dcfe11ee16

BUG=662657

Review-Url: https://codereview.chromium.org/2491233002
Cr-Commit-Position: refs/heads/master@{#431230}

Former-commit-id: eaef39e4135d0ea8a18d43e8eec24bb572fdba4d